test/bad/var-redef.mac



int main() {
    int a = 0;
    int a = 5;
    return 0;
}